--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ python-dotenv = "^0.21.0"
 decouple = "^0.0.7"
 python-decouple = "^3.6"
 django-filter = "^22.1"
+django-environ = "^0.9.0"
 
 [tool.poetry.dev-dependencies]
 
