--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ HOST_SQL=localhost
 USER_SQL=root
 BD_SQL=ksp_db
 PORT_SQL=3306
-PASSWORD_SQL=
+PASSWORD_SQL=Alexissac123.
 
 # Env config
 ENV=local
