--- a/.env.sample
+++ b/.env.sample
@@ -2,7 +2,7 @@ HOST_SQL=localhost
 USER_SQL=root
 BD_SQL=ksp_db
 PORT_SQL=3306
-PASSWORD_SQL=Alexissac123.
+PASSWORD_SQL=
 
 # Env config
 ENV=local
